(bf) FIXED old-first wich disappears on iphone X

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 /*** HERO ***/
 #hero {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@ body {
 
 #hero video {
   width: 100%;
-  min-height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -185,8 +185,9 @@ body {
 
 .old-first {
   background-color: #000;
-  padding-top: 7rem;
+  padding-top: 3rem;
 }
+
 .old-title h2 {
   padding: 0 2rem 0;
 }
